<resources>
    <string name="app_name">Timecraft</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="user_profile_picture">User Profile Picture</string>
    <string name="user_s_name">User\'s Name</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="achievements">Achievements</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_profile">Profile</string>
    <string name="completed_tasks_counter">Completed</string>
    <string name="achievements_count">Achievements</string>
    <string name="inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="achievements_button">Achievements button</string>
    <string name="inventory_btn">Inventory Button</string>
    <string name="settings_title">Settings</string>
    <string name="appearance_text">Appearance</string>
    <string name="account_text">Account</string>
    <string name="datetime_text">Date/Time Format</string>
    <string name="achievements_title">Achievements</string>
    <string name="BackCalendarButton"><![CDATA[<-]]></string>
    <string name="ForwardCalendarButton"><![CDATA[->]]></string>
</resources>