<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_tasks"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</menu>