<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/orange"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/settings_title"
                android:textSize="32sp">

            </TextView>

        </LinearLayout>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/account_btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="Account button"
                    android:src="@drawable/ic_account_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/appearance_btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="Appearance button"
                    android:src="@drawable/ic_phone_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appearance_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/datetime_btn_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center|top"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="Date/Time button"
                    android:src="@drawable/ic_calendar_month_black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/datetime_text"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingLeft="15dp"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Logout"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Delete Account"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>